--- a/TwinCatOhje.org
+++ b/TwinCatOhje.org
@@ -754,14 +754,21 @@ muuttujaa oikealla ja valitaan **Change Link**
 
 [[file:kuvat/Skannaus/Link02.png]]
 
+Seuraavaksi aukeaa ikkuna, josta voidaan valita tulo tai lähtö johon muuttuja linkitetään.
+
+[[file:kuvat/Skannaus/Link02b.png]]
+
 Laitepuusta linkittäminen tapahtuu aukaisemalla halutun moduulin alta ensin
 tulo/lähtö (esim. Channel 1) ja sen jälkeen klikkaamalla **Output** tai
 **Input** kohtaa oikealla ja valitsemalla **Change Link**.
 
-[[file:kuvat/Skannaus/Link03.png]]
+[[file:kuvat/Skannaus/Link05.png]]
 
-Molemmilla tavoilla aukeaa linkitysikkuna josta voidaan valita joko haluttua
-tulo/lähtö tai haluttu muuttuja, johon linkitetään.
+Aukeutuvasta ikkunasta nähdään valittuun tuloon tai lähtöön sopivat muuttujat,
+joihin linkitys voidaan tehdä.
+
+[[file:kuvat/Skannaus/Link05b.png]]
+
 
 
 * Ongelmatilanteet
